--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,5 +8,7 @@
     <h1>Unit 2 Assignment - Part 1</h1>
     <p>See console for output.</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
+    <p> Question 15 seems like it is incomplete. "if the value of 'pets' is greater than the value of 'allowedPets'... Is there something that should be done here?</p>
+    <p> Wording here is confusing</p>
   </body>
 </html>
